@@ -2,10 +2,8 @@ package com.hexalib.api.livre.service;
 
 import com.hexalib.api.categorie.model.Categorie;
 import com.hexalib.api.categorie.repository.CategorieRepository;
-import com.hexalib.api.common.exception.BadRequestException;
-import com.hexalib.api.common.exception.ResourceNotFoundException;
 import com.hexalib.api.common.util.CodeGenerator;
-import com.hexalib.api.livre.dto.ImportResultResponse;
+import com.hexalib.api.livre.dto.ImportJobDTO;
 import com.hexalib.api.livre.model.Livre;
 import com.hexalib.api.livre.repository.LivreRepository;
 import lombok.RequiredArgsConstructor;
@@ -18,246 +16,253 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.List;
+import java.math.RoundingMode;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class LivreImportService {
 
-    private final LivreRepository      livreRepository;
-    private final CategorieRepository  categorieRepository;
-    private final LivreService         livreService;
+    private static final int DATA_START_ROW = 4; // ligne 5 = index 4
+    private static final int BATCH_SIZE     = 50;
 
-    // Indices des colonnes du template (0-based)
-    private static final int COL_TITRE          = 0;
-    private static final int COL_AUTEUR         = 1;
-    private static final int COL_MAISON_EDITION = 2;
-    private static final int COL_LANGUE         = 3;
-    private static final int COL_PRIX_VENTE     = 4;
-    private static final int COL_QUANTITE_STOCK = 5;
-    private static final int COL_SEUIL_MINIMAL  = 6;
-    private static final int COL_ISBN           = 7;
-    private static final int COL_DATE_PARUTION  = 8;
-    private static final int COL_EMPLACEMENT    = 9;
-    private static final int COL_DESCRIPTION    = 10;
+    private final CategorieRepository categorieRepository;
+    private final LivreRepository     livreRepository;
+    private final ImportJobStore      jobStore;
+    // ✅ Plus de dépendance à CategorieService — on utilise CodeGenerator directement
 
-    // Ligne de départ des données (0-based) : lignes 0=titre doc, 1=instructions, 2=en-têtes → données à partir de 3
-    private static final int DATA_START_ROW = 3;
+    // ══════════════════════════════════════════════════════════════════
+    // ÉTAPE 1 : Upload + parsing → création du job
+    // ══════════════════════════════════════════════════════════════════
 
-    @Transactional
-    public ImportResultResponse importLivres(MultipartFile file, String categorieId) {
-        log.info("Début import livres pour catégorie {}", categorieId);
+    public ImportJobDTO.ImportJobStarted parseEtCreerJob(MultipartFile file) throws IOException {
+        log.info("Parsing du fichier Excel : {}", file.getOriginalFilename());
 
-        // Vérifier le fichier
-        if (file == null || file.isEmpty()) {
-            throw new BadRequestException("Le fichier Excel est obligatoire");
-        }
-        String filename = file.getOriginalFilename();
-        if (filename == null || (!filename.endsWith(".xlsx") && !filename.endsWith(".xls"))) {
-            throw new BadRequestException("Le fichier doit être au format Excel (.xlsx ou .xls)");
-        }
+        List<ImportJobStore.LigneParsee> lignes = new ArrayList<>();
 
-        // Récupérer la catégorie
-        Categorie categorie = categorieRepository.findById(categorieId)
-                .orElseThrow(() -> new ResourceNotFoundException("Catégorie", "id", categorieId));
+        try (Workbook wb = new XSSFWorkbook(file.getInputStream())) {
+            Sheet sheet = wb.getSheetAt(0);
 
-        // Résultats
-        int totalLignes      = 0;
-        int livresAjoutes    = 0;
-        int lignesIncompletes = 0;
-        List<ImportResultResponse.DoublonInfo> doublons        = new ArrayList<>();
-        List<String>                           lignesIgnorees  = new ArrayList<>();
-
-        try (Workbook workbook = new XSSFWorkbook(file.getInputStream())) {
-            Sheet sheet = workbook.getSheetAt(0);
-
-            for (int rowIdx = DATA_START_ROW; rowIdx <= sheet.getLastRowNum(); rowIdx++) {
-                Row row = sheet.getRow(rowIdx);
+            for (int i = DATA_START_ROW; i <= sheet.getLastRowNum(); i++) {
+                Row row = sheet.getRow(i);
                 if (row == null) continue;
 
-                // Ignorer les lignes entièrement vides
-                if (isRowEmpty(row)) continue;
+                String categorie  = getCellString(row, 0);
+                String titre      = getCellString(row, 1);
+                String auteurIsbn = getCellString(row, 2);
+                String editeur    = getCellString(row, 3);
+                String remarque   = getCellString(row, 6);
 
-                totalLignes++;
-                int excelLine = rowIdx + 1; // Numéro de ligne lisible (1-based)
+                // Ignorer les lignes sans titre
+                if (titre.isBlank()) continue;
 
-                // ── Lire les champs obligatoires ──
-                String titre         = getCellString(row, COL_TITRE);
-                String auteur        = getCellString(row, COL_AUTEUR);
-                String maisonEdition = getCellString(row, COL_MAISON_EDITION);
-                String langue        = getCellString(row, COL_LANGUE);
-                BigDecimal prixVente = getCellDecimal(row, COL_PRIX_VENTE);
-                Integer quantiteStock = getCellInt(row, COL_QUANTITE_STOCK);
-                Integer seuilMinimal  = getCellInt(row, COL_SEUIL_MINIMAL);
+                // Traitement du prix (colonne E = index 4)
+                BigDecimal prixVente = null;
+                boolean inactif = false;
+                Cell prixCell = row.getCell(4);
 
-                // ── Vérifier complétude des champs obligatoires ──
-                if (isBlank(titre) || isBlank(auteur) || isBlank(maisonEdition)
-                        || isBlank(langue) || prixVente == null
-                        || quantiteStock == null || seuilMinimal == null) {
-
-                    lignesIncompletes++;
-                    String detail = String.format("Ligne %d ignorée (champs obligatoires manquants) : titre='%s'",
-                            excelLine, titre != null ? titre : "");
-                    lignesIgnorees.add(detail);
-                    log.debug(detail);
-                    continue;
+                if (prixCell != null) {
+                    if (prixCell.getCellType() == CellType.NUMERIC) {
+                        double valBrute = prixCell.getNumericCellValue();
+                        if (valBrute == 0.0) {
+                            // Prix 0 = pas à vendre → INACTIF
+                            inactif = true;
+                        } else {
+                            // 3000 → 30.00 XAF
+                            prixVente = BigDecimal.valueOf(valBrute)
+                                    .divide(BigDecimal.valueOf(100), 2, RoundingMode.HALF_UP);
+                        }
+                    }
+                    // CellType.STRING avec "xx" → prixVente reste null, inactif reste false
                 }
 
-                // ── Vérifier doublon : titre + auteur + prixVente ──
-                if (livreRepository.existsByTitreAndAuteurAndPrixVente(titre, auteur, prixVente)) {
-                    doublons.add(ImportResultResponse.DoublonInfo.builder()
-                            .titre(titre)
-                            .auteur(auteur)
-                            .prixVente(prixVente.toPlainString() + " XAF")
-                            .numeroLigne(excelLine)
-                            .build());
-                    log.debug("Doublon détecté ligne {} : {} - {}", excelLine, titre, auteur);
-                    continue;
-                }
-
-                // ── Lire les champs optionnels ──
-                String    isbn          = getCellString(row, COL_ISBN);
-                String    dateParutionStr = getCellString(row, COL_DATE_PARUTION);
-                String    emplacement   = getCellString(row, COL_EMPLACEMENT);
-                String    description   = getCellString(row, COL_DESCRIPTION);
-                LocalDate dateParution  = parseDate(dateParutionStr);
-
-                // Vérifier ISBN unique si fourni
-                if (!isBlank(isbn) && livreRepository.existsByIsbn(isbn)) {
-                    isbn = null; // Ignorer l'ISBN en doublon plutôt que bloquer
-                    log.warn("ISBN doublon ignoré ligne {}", excelLine);
-                }
-
-                // ── Générer le code unique ──
-                String code = generateUniqueLivreCode(categorie);
-
-                // ── Créer le livre ──
-                Livre livre = new Livre();
-                livre.setCode(code);
-                livre.setTitre(titre);
-                livre.setAuteur(auteur);
-                livre.setMaisonEdition(maisonEdition);
-                livre.setLangue(langue);
-                livre.setPrixVente(prixVente);
-                livre.setQuantiteStock(quantiteStock);
-                livre.setSeuilMinimal(seuilMinimal);
-                livre.setCategorie(categorie);
-                livre.setStatut(Livre.Statut.ACTIF);
-                if (!isBlank(isbn))        livre.setIsbn(isbn);
-                if (dateParution != null)  livre.setDateParution(dateParution);
-                if (!isBlank(emplacement)) livre.setEmplacement(emplacement);
-                if (!isBlank(description)) livre.setDescription(description);
-
-                livreRepository.save(livre);
-                livresAjoutes++;
+                lignes.add(new ImportJobStore.LigneParsee(
+                        i + 1,
+                        categorie.trim(),
+                        titre.trim(),
+                        auteurIsbn.isBlank() ? null : auteurIsbn.trim(),
+                        editeur.isBlank()    ? null : editeur.trim(),
+                        prixVente,
+                        inactif,
+                        remarque.isBlank()   ? null : remarque.trim()
+                ));
             }
-
-        } catch (IOException e) {
-            log.error("Erreur lecture fichier Excel", e);
-            throw new BadRequestException("Erreur lors de la lecture du fichier Excel : " + e.getMessage());
         }
 
-        log.info("Import terminé : {} ajoutés, {} incomplets, {} doublons sur {} lignes lues",
-                livresAjoutes, lignesIncompletes, doublons.size(), totalLignes);
+        log.info("{} lignes valides parsées", lignes.size());
 
-        return ImportResultResponse.builder()
-                .totalLignesLues(totalLignes)
-                .livresAjoutes(livresAjoutes)
-                .lignesIncompletes(lignesIncompletes)
-                .doublonsTrouves(doublons.size())
-                .doublons(doublons)
-                .lignesIgnoreesDetail(lignesIgnorees)
+        String jobId        = jobStore.creerJob(lignes, BATCH_SIZE);
+        int    totalBatches = (int) Math.ceil((double) lignes.size() / BATCH_SIZE);
+
+        return ImportJobDTO.ImportJobStarted.builder()
+                .jobId(jobId)
+                .totalLignes(lignes.size())
+                .totalBatches(totalBatches)
+                .batchSize(BATCH_SIZE)
                 .build();
     }
 
-    // ── Génération code unique ────────────────────────────────────────────────
+    // ══════════════════════════════════════════════════════════════════
+    // ÉTAPE 2 : Traitement d'un batch
+    // ══════════════════════════════════════════════════════════════════
 
-    private String generateUniqueLivreCode(Categorie categorie) {
-        String code;
-        int counter = 1;
-        do {
-            code = String.format("%s-%03d", categorie.getCode(), counter++);
-            if (counter > 9999) throw new BadRequestException("Impossible de générer un code unique");
-        } while (livreRepository.existsByCode(code));
-        return code;
-    }
+    @Transactional
+    public ImportJobDTO.ImportBatchResult traiterBatch(String jobId, int batchNumero) {
+        ImportJobStore.JobData job = jobStore.getJob(jobId);
+        if (job == null) throw new RuntimeException("Job introuvable : " + jobId);
 
-    // ── Helpers de lecture cellules ───────────────────────────────────────────
+        List<ImportJobStore.LigneParsee> toutesLignes = job.lignes();
+        int total        = toutesLignes.size();
+        int totalBatches = (int) Math.ceil((double) total / BATCH_SIZE);
+        int debut        = (batchNumero - 1) * BATCH_SIZE;
+        int fin          = Math.min(debut + BATCH_SIZE, total);
 
-    private String getCellString(Row row, int colIdx) {
-        Cell cell = row.getCell(colIdx, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
-        if (cell == null) return null;
-        switch (cell.getCellType()) {
-            case STRING:  return cell.getStringCellValue().trim();
-            case NUMERIC: return String.valueOf((long) cell.getNumericCellValue()).trim();
-            case BOOLEAN: return String.valueOf(cell.getBooleanCellValue());
-            default:      return null;
+        if (debut >= total) {
+            throw new RuntimeException("Batch " + batchNumero + " hors limites");
         }
-    }
 
-    private BigDecimal getCellDecimal(Row row, int colIdx) {
-        Cell cell = row.getCell(colIdx, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
-        if (cell == null) return null;
-        try {
-            if (cell.getCellType() == CellType.NUMERIC) {
-                return BigDecimal.valueOf(cell.getNumericCellValue());
-            }
-            if (cell.getCellType() == CellType.STRING) {
-                String val = cell.getStringCellValue().trim().replaceAll("[^0-9.]", "");
-                return isBlank(val) ? null : new BigDecimal(val);
-            }
-        } catch (Exception e) {
-            log.debug("Impossible de lire décimal colonne {}", colIdx);
-        }
-        return null;
-    }
+        List<ImportJobStore.LigneParsee> batch = toutesLignes.subList(debut, fin);
 
-    private Integer getCellInt(Row row, int colIdx) {
-        Cell cell = row.getCell(colIdx, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
-        if (cell == null) return null;
-        try {
-            if (cell.getCellType() == CellType.NUMERIC) {
-                return (int) cell.getNumericCellValue();
-            }
-            if (cell.getCellType() == CellType.STRING) {
-                String val = cell.getStringCellValue().trim();
-                return isBlank(val) ? null : Integer.parseInt(val);
-            }
-        } catch (Exception e) {
-            log.debug("Impossible de lire entier colonne {}", colIdx);
-        }
-        return null;
-    }
+        int livresAjoutes = 0;
+        int livresIgnores = 0;
+        List<ImportJobDTO.LigneErreur> erreurs = new ArrayList<>();
 
-    private LocalDate parseDate(String dateStr) {
-        if (isBlank(dateStr)) return null;
-        try {
-            return LocalDate.parse(dateStr.trim(), DateTimeFormatter.ofPattern("yyyy-MM-dd"));
-        } catch (Exception e) {
+        for (ImportJobStore.LigneParsee ligne : batch) {
             try {
-                return LocalDate.parse(dateStr.trim(), DateTimeFormatter.ofPattern("dd/MM/yyyy"));
-            } catch (Exception e2) {
-                return null;
+                boolean ajoute = traiterLigne(ligne);
+                if (ajoute) livresAjoutes++;
+                else        livresIgnores++;
+            } catch (Exception e) {
+                log.warn("Erreur ligne {} : {}", ligne.numeroLigne(), e.getMessage());
+                erreurs.add(ImportJobDTO.LigneErreur.builder()
+                        .numeroLigne(ligne.numeroLigne())
+                        .titre(ligne.titre())
+                        .raison(e.getMessage())
+                        .build());
+                livresIgnores++;
             }
         }
+
+        int traites     = fin;
+        int pourcentage = (int) Math.round((double) traites / total * 100);
+        boolean termine = (batchNumero >= totalBatches);
+
+        ImportJobDTO.ImportBatchResult.ImportBatchResultBuilder builder =
+                ImportJobDTO.ImportBatchResult.builder()
+                        .jobId(jobId)
+                        .batchNumero(batchNumero)
+                        .totalBatches(totalBatches)
+                        .traites(traites)
+                        .total(total)
+                        .pourcentage(pourcentage)
+                        .termine(termine);
+
+        if (termine) {
+            builder.rapport(construireRapportFinal(total, erreurs));
+            jobStore.supprimerJob(jobId);
+        }
+
+        return builder.build();
     }
 
-    private boolean isRowEmpty(Row row) {
-        for (int c = COL_TITRE; c <= COL_DESCRIPTION; c++) {
-            Cell cell = row.getCell(c, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
-            if (cell != null && cell.getCellType() != CellType.BLANK) {
-                String val = getCellString(row, c);
-                if (!isBlank(val)) return false;
-            }
-        }
+    // ══════════════════════════════════════════════════════════════════
+    // LOGIQUE PRINCIPALE : traiter une ligne
+    // ══════════════════════════════════════════════════════════════════
+
+    private boolean traiterLigne(ImportJobStore.LigneParsee ligne) {
+        // 1. Vérifier ou créer la catégorie
+        Categorie categorie = obtenirOuCreerCategorie(ligne.categorie());
+
+        // 2. Vérifier doublon : titre + auteur + catégorie (via @Query)
+        String auteur = ligne.auteur() != null ? ligne.auteur() : "";
+        boolean existe = livreRepository
+                .existsByTitreAndAuteurAndCategorieId(ligne.titre(), auteur, categorie.getId());
+        if (existe) return false; // doublon ignoré silencieusement
+
+        // 3. Créer le livre
+        Livre livre = new Livre();
+        livre.setTitre(ligne.titre());
+        livre.setAuteur(ligne.auteur());
+        livre.setMaisonEdition(ligne.maisonEdition());
+        livre.setPrixVente(ligne.prixVente());
+        livre.setDescription(ligne.description());
+        livre.setCategorie(categorie);
+        livre.setQuantiteStock(0);
+        livre.setSeuilMinimal(5);
+        livre.setStatut(ligne.inactif() ? Livre.Statut.INACTIF : Livre.Statut.ACTIF);
+        livre.setCode(genererCodeLivre(categorie.getCode()));
+
+        livreRepository.save(livre);
         return true;
     }
 
-    private boolean isBlank(String s) {
-        return s == null || s.trim().isEmpty();
+    // ══════════════════════════════════════════════════════════════════
+    // HELPERS
+    // ══════════════════════════════════════════════════════════════════
+
+    // Cache local pour ne pas faire N fois la même requête BDD dans un batch
+    private final Map<String, Categorie> cacheCategories = new HashMap<>();
+
+    private Categorie obtenirOuCreerCategorie(String nomCategorie) {
+        if (nomCategorie == null || nomCategorie.isBlank()) {
+            nomCategorie = "Non classé";
+        }
+        final String nom = nomCategorie;
+
+        return cacheCategories.computeIfAbsent(nom.toLowerCase(), k ->
+            categorieRepository.findByNomIgnoreCase(nom)
+                .orElseGet(() -> {
+                    log.info("Création catégorie : {}", nom);
+                    Categorie cat = new Categorie();
+                    cat.setNom(nom);
+                    cat.setStatut(Categorie.Statut.ACTIF);
+                    cat.setCode(genererCodeCategorieUnique(nom));
+                    return categorieRepository.save(cat);
+                })
+        );
+    }
+
+    /**
+     * Même logique que CategorieService.generateUniqueCode()
+     * mais sans injecter CategorieService (évite la dépendance circulaire potentielle).
+     */
+    private String genererCodeCategorieUnique(String nom) {
+        String code;
+        int attempts = 0;
+        do {
+            code = CodeGenerator.generateCategorieCode(nom);
+            attempts++;
+            if (attempts > 100) {
+                throw new RuntimeException("Impossible de générer un code unique pour : " + nom);
+            }
+        } while (categorieRepository.existsByCode(code));
+        return code;
+    }
+
+    private String genererCodeLivre(String codeCategorie) {
+        int suivant = livreRepository.countByCategorieCode(codeCategorie) + 1;
+        return String.format("%s-%03d", codeCategorie, suivant);
+    }
+
+    private ImportJobDTO.ImportRapportFinal construireRapportFinal(
+            int totalLignes, List<ImportJobDTO.LigneErreur> erreurs) {
+        return ImportJobDTO.ImportRapportFinal.builder()
+                .totalLignesLues(totalLignes)
+                .livresAjoutes(totalLignes - erreurs.size())
+                .livresIgnores(erreurs.size())
+                .erreurs(erreurs)
+                .build();
+    }
+
+    private String getCellString(Row row, int col) {
+        Cell cell = row.getCell(col);
+        if (cell == null) return "";
+        return switch (cell.getCellType()) {
+            case STRING  -> cell.getStringCellValue();
+            case NUMERIC -> String.valueOf((long) cell.getNumericCellValue());
+            case BOOLEAN -> String.valueOf(cell.getBooleanCellValue());
+            default      -> "";
+        };
     }
 }
